Fix colors of label drawer for better contrast

--- a/ui/src/app/workflows/components/workflow-labels/workflow-labels.scss
+++ b/ui/src/app/workflows/components/workflow-labels/workflow-labels.scss
@@ -8,14 +8,14 @@
   padding: 0.25em 0;
   $gutter: 0.5em;
   font-size: .8125em;
-  background-color: $argo-color-gray-5;
+  background-color: $argo-color-gray-1;
   margin-top: -8px;
   padding: 0.5em 15px;
   border-radius: 0 0 3px 3px;
 
   .tag {
     line-height: normal;
-    background-color: $argo-color-gray-1;
+    background-color: $argo-color-gray-3;
     border-radius: 3px;
     height: auto;
     margin: $gutter 0;
